Fixes bearer token auth in Swagger
